Redo using openweathermap api

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 <body>
   <div class="container-fluid">
     <div id="home" class="jumbotron">
-      <h1>Free Code Camp</h1>
       <h1 id="header">Weather App</h1>
       <div id="black" class="well">
+        <img id="image" src="" alt="Weather description here">
         <div id="city"></div>
         <div id="weatherType"></div>
         <div class="temp" id="temp"></div>
@@ -31,9 +31,8 @@
   </div>
   
   <footer>
-    <div>Built by
-      <a href="http://chrismayer.me" target="_blank">Chris Mayer</a>
-    </div>
+    <div>Built using openweathermap.com API.</div>
+    <div><a href="http://chrismayer.me" target="_blank">Chris Mayer</a></div>
   </footer>
 
   <!-- add scripts -->
