Add in zip code search

--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
         <div class="temp" id="temp"></div>
         <button id="button" type="button" class="btn btn-primary">Switch to Celsius</button>
         <div id="windSpeed"></div>
+        <div class="input-group center_div row">
+          <input id="zipInput" class="form-control" placeholder="zip code" type="text">
+          <span class="input-group-btn">
+              <button id="zip" class="btn btn-default" type="button">Search</button>
+          </span>
+        </div>
       </div>
     </div>
   </div>
