Add in warning if zip code is invalid

--- a/index.html
+++ b/index.html
@@ -11,8 +11,18 @@
     rel='stylesheet' type='text/css'>
 
   <!-- add styles -->
-  <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css'>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+  <!-- <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css'> -->
   <link rel="stylesheet" href="css/style.css">
+
+  <!-- add scripts -->
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <!-- <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script> -->
+  <script src="js/index.js"></script>
+
+
 </head>
 
 <body>
@@ -27,11 +37,12 @@
         <button id="button" type="button" class="btn btn-primary">Switch to Celsius</button>
         <div id="windSpeed"></div>
         <div class="input-group center_div row">
-          <input id="zipInput" class="form-control" placeholder="zip code" type="text">
+          <input id="zipInput" class="form-control" placeholder="zip code" type="number" pattern="\d{5}">
           <span class="input-group-btn">
               <button id="zip" class="btn btn-default" type="button">Search</button>
           </span>
         </div>
+        <div id="zip_error" class="alert alert-danger" role="alert" style="display: none;"></div>
       </div>
     </div>
   </div>
@@ -41,9 +52,7 @@
     <div><a href="http://chrismayer.me" target="_blank">Chris Mayer</a></div>
   </footer>
 
-  <!-- add scripts -->
-  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script>
-  <script src="js/index.js"></script>
+  
 
 </body>
 </html>
